Details
-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.5
-
None
-
-
05b91c079 (dev)
Description
http://testresults.qt.io/coin/integration/qt/qt5/tasks/web_qt_qt5_1670329974654
http://testresults.qt.io/coin/api/results/qt/qtquickeffectmaker/d467965ab8300f2e555237e9008cb78a24acf291/LinuxUbuntu_22_04x86_64LinuxUbuntu_22_04x86_64GCCqtci-linux-Ubuntu-22.04-x86_64-51-f21ba9Documentation_Insignificant_Sccache_TestDocs_UseConfigure/b96eee00c221c6834104b6c655cd418bfee6fca6/build_1680386991/log.txt.gz
agent:2022/12/06 16:44:05 build.go:399: In file included from /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:4: agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.h:34:21: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 34 | QStringList requires; agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp: In member function ‘virtual TestNamespace::QVariant AddNodeModel::data(const TestNamespace::QModelIndex&, int) const’: agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:62:41: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 62 | return QVariant::fromValue(node.requires.join(", ")); agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp: In member function ‘void AddNodeModel::loadNodesFromPath(const TestNamespace::QString&)’: agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:117:58: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 117 | if (!nodeName.isEmpty() && !data.requires.contains(nodeName)) agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:117:58: error: expected ‘)’ before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 117 | if (!nodeName.isEmpty() && !data.requires.contains(nodeName)) agent:2022/12/06 16:44:05 build.go:399: | ~ ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: | ) agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:118:34: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 118 | data.requires << nodeName; agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: Sccache command failed, re-try calling build tool directly agent:2022/12/06 16:44:05 build.go:399: In file included from /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:4: agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.h:34:21: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 34 | QStringList requires; agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp: In member function ‘virtual TestNamespace::QVariant AddNodeModel::data(const TestNamespace::QModelIndex&, int) const’: agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:62:41: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 62 | return QVariant::fromValue(node.requires.join(", ")); agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp: In member function ‘void AddNodeModel::loadNodesFromPath(const TestNamespace::QString&)’: agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:117:58: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 117 | if (!nodeName.isEmpty() && !data.requires.contains(nodeName)) agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:117:58: error: expected ‘)’ before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 117 | if (!nodeName.isEmpty() && !data.requires.contains(nodeName)) agent:2022/12/06 16:44:05 build.go:399: | ~ ^~~~~~~~ agent:2022/12/06 16:44:05 build.go:399: | ) agent:2022/12/06 16:44:05 build.go:399: /home/qt/work/qt/qtquickeffectmaker/tools/qqem/addnodemodel.cpp:118:34: error: expected unqualified-id before ‘requires’ agent:2022/12/06 16:44:05 build.go:399: 118 | data.requires << nodeName; agent:2022/12/06 16:44:05 build.go:399: | ^~~~~~~~
Attachments
Issue Links
- is required for
-
QTQAINFRA-4698 Ubuntu 22.04 as Embedded Development Host
-
- Closed
-