Rename variable

Rename "requires" which is keyword since C++20 to "requiredNodes".

Task-number: QTBUG-109231
Change-Id: I5a504654780c220429ebab27eb3697429560e4ca
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>